Fix problem with media queries not working right on mobile devices

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -4,6 +4,7 @@ body {
 
 .questionContainer {
     padding: 2rem 2.5rem;
+    width: 100%;
 }
 
 .answerBox {
@@ -19,17 +20,19 @@ body {
     cursor: pointer;
     box-shadow: 0px 0px 19px -3px rgba(183, 124, 119, 0.8);
     transform: scale(1.02);
-    transform: transform 100ms;
+    transition: transform 150ms;
 }
 
 .answer {
     padding: 2rem 2.5rem;
     color: white;
+    font-size: 4rem;
 }
 
 .answerText {
     padding: 2rem;
     width: 100%;
+    font-size: 4rem;
 }
 
 #game {
@@ -38,8 +41,8 @@ body {
     border-radius: 6px;
     width: 100%;
     height: 100%;
-    max-width: 80rem;
-    max-height: 80rem;
+    max-width: 100rem;
+    max-height: 100rem;
     padding: 50px;
     text-align: center;
     box-shadow: 0px 0px 19px -3px rgba(183, 124, 119, 0.8);
@@ -71,10 +74,10 @@ body {
 
 #progressBar {
     width: 20rem;
-    height: 3rem;
+    height: 2rem;
     border: 0.2rem solid green;
     margin-top: 2rem;
-    border-radius: 50px;
+    border-radius: 5px;
     overflow: hidden;
 }
 
@@ -85,21 +88,44 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+
+    .container {
+        padding: 1rem;
+    }
+
     .answerBox {
-        min-width: 40rem;
+        min-width: 35rem;
+    }
+
+    .questionContainer h2 {
+        font-size: 2.5rem;
+    }
+
+    .questionContainer h1 {
+        font-size: 3.5rem;
     }
 
     #game {
-        min-width: 40rem;
-        min-height 100%;
+        min-width: 36rem;
         padding: 5px;
         max-width: 100%;
         max-height: 100%;
     }
 
     .questionContainer {
-        padding: none;
+        padding: 1rem;
         text-align: center;
-        border: 1px solid red;
+    }
+
+    .answer {
+        font-size: 2.5rem;
+        padding: 1rem 1.5rem;
+        color: white;
+    }
+
+    .answerText {
+        font-size: 2.5rem;
+        padding: 1rem;
+        width: 100%;
     }
 }
