--- a/assets/css/highscores.css
+++ b/assets/css/highscores.css
@@ -10,4 +10,5 @@ body {
 .highScore {
     font-size: 2.8rem;
     margin-bottom: 0.5rem;
+    text-shadow: 2px 2px 4px #000000;
 }
