--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,17 +10,20 @@ body {
     font-family: 'Ysabeau', sans-serif;
     color: #ccc9be;
     box-sizing: border-box;
+    font-size: 62.5%;
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 4.5rem;
     color: #B78C77;
     text-shadow: 2px 2px 4px #000000;
+    margin-bottom: 5rem;
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 4rem;
     text-shadow: 2px 2px 4px #000000;
+    margin-bottom: 4rem;
 }
 
 .container {
